# ddelta-rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: diff.rs  lib.rs  patch.rs
