[package]
name = "ddelta"
version = "0.2.1"
authors = ["lights0123 <developer@lights0123.com>"]
description = "Rust port of the streaming ddelta patch algorithm, based on bsdiff"
repository = "https://github.com/lights0123/ddelta-rs"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
zerocopy = { version = "0.8", features = ["derive"] }
byteorder = "1.5"
divsufsort = { version = "2.0.0", optional = true }
thiserror = "2"
cdivsufsort = { version = "2.0.0", optional = true }
argh = "0.1"

[features]
default = ["c", "diff"]
c = ["cdivsufsort"]
diff = ["divsufsort"]

[profile.release]
panic = "abort"
lto = true
